force-app/main/default/objects/VS_ProductGroupLevel__c/VS_ProductGroupLevel__c.object-meta.xml
<CustomObject>
    <description>Product Group level(1~4) 기준정보를 관리하는 오브젝트</description>
    <label>Product Group Level</label>
    <nameField>
        <label>Product Group Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Group Level</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>