force-app/main/default/objects/VS_ProductGroupLevel__c/fields/ModelM1M2Code__c.field-meta.xml
<CustomField>
    <fullName>ModelM1M2Code__c</fullName>
    <description>견적모델 생성시 M1 과 M2 두자리의 코드 정보</description>
    <label>Model M1 M2 Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>