force-app/main/default/objects/VS_ProductGroupLevel__c/fields/ProductGroupEnglishName__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupEnglishName__c</fullName>
    <description>제품군영문명</description>
    <label>Product Group English Name</label>
    <length>240</length>
    <type>Text</type>
</CustomField>