force-app/main/default/objects/VS_ProductGroupLevel__c/fields/ProductGroupKoreanName__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupKoreanName__c</fullName>
    <description>제품군한글명</description>
    <label>Product Group Korean Name</label>
    <length>240</length>
    <type>Text</type>
</CustomField>