force-app/main/default/objects/VS_ProductGroupLevel__c/fields/ProductGroupLevelCode__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupLevelCode__c</fullName>
    <description>제품군레벨코드</description>
    <label>Product Group Level Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>