force-app/main/default/objects/VS_ProductGroupLevel__c/fields/UseYn__c.field-meta.xml
<CustomField>
    <fullName>UseYn__c</fullName>
    <description>사용여부</description>
    <label>Use Yn</label>
    <length>1</length>
    <type>Text</type>
</CustomField>