force-app/main/default/objects/VS_ProductGroupLevel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ProductGroupLevelCode__c</columns>
    <columns>NAME</columns>
    <columns>ProductGroupEnglishName__c</columns>
    <columns>ProductGroupKoreanName__c</columns>
    <columns>ModelM1M2Code__c</columns>
    <columns>UseYn__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UseYn__c</field>
        <operation>equals</operation>
        <value>Y</value>
    </filters>
    <label>All</label>
</ListView>